# Auto-rocokingdom

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  auto-roco-client-full.spec  auto-roco-client-lite.spec  build.py  client_main.py  config.py  main.py  pyproject.toml  user_prefs.json
.github/workflows/: release.yml
core/: battle_classify.py  capture.py  engine.py  gui.py  input.py  ocr.py  pollute_logger.py  util.py  vision.py  window.py
modes/: __init__.py  ball.py  base.py  battle.py  escape.py  smart.py
tests/: conftest.py  manual_test_edge.py  test_config.py  test_engine.py  test_gui.py  test_modes_base.py  test_modes_registry.py  test_modes_smart.py  test_pollute_logger.py  test_vision.py
tools/: dump_frame.py  dump_templates.py  test_margin.py
web/: index.html
